@@ -6,18 +6,19 @@ ms.assetid: 62FAF21C-8090-4AF3-9D88-05A4CFCAFFDC
 ms.technology: xamarin-android
 author: mgmclemore
 ms.author: mamcle
-ms.date: 02/16/2018
-ms.openlocfilehash: 32d98efd644fb033785fbae0d9689494e42b2809
-ms.sourcegitcommit: 945df041e2180cb20af08b83cc703ecd1aedc6b0
+ms.date: 06/02/2018
+ms.openlocfilehash: 691be280b80e379863cc09d0f1bba0ff5882cf21
+ms.sourcegitcommit: a7febc19102209b21e0696256c324f366faa444e
 ms.translationtype: MT
 ms.contentlocale: tr-TR
-ms.lasthandoff: 04/04/2018
+ms.lasthandoff: 06/04/2018
+ms.locfileid: "34732927"
 ---
 # <a name="adjusting-java-memory-parameters-for-the-android-designer"></a>Android Tasarımcı Java bellek parametrelerini ayarlama
 
 Başlatma sırasında kullanılan varsayılan bellek parametreleri `java` işlemek için Android Tasarımcısı bazı sistem yapılandırmasıyla uyumsuz olabilir.
 
-Xamarin Studio 5.7.2.7 (ve daha sonra Visual Studio Mac için) ile başlayan ve Xamarin için Visual Studio 3.9.344 bu ayarları bir proje başına temelinde özelleştirilebilir.
+Xamarin Studio 5.7.2.7 (ve daha sonra Visual Studio Mac için) ile başlayan ve Visual Studio Araçları için Xamarin 3.9.344, bu ayarlar bir proje başına temelinde özelleştirilebilir.
 
 ## <a name="new-android-designer-properties-and-corresponding-java-options"></a>Yeni Android Tasarımcısı özellikleri ve karşılık gelen Java seçenekleri
 
@@ -25,9 +26,9 @@ Aşağıdaki özellik adlarını belirtilen java karşılık gelen [komut satır
 
 - **AndroidDesignerJavaRendererMinMemory** - Xms
 
-- **AndroidDesignerJavaRendererMaxMemory** -Xmx
+- **AndroidDesignerJavaRendererMaxMemory** - Xmx
 
-- **AndroidDesignerJavaRendererPermSize** -XX:MaxPermSize
+- **AndroidDesignerJavaRendererPermSize** - XX: MaxPermSize
 
 
 # <a name="visual-studiotabvswin"></a>[Visual Studio](#tab/vswin)
